<resources>
    <string name="app_name">HackerNews</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_app_info">App Info</string>
    <string name="title_activity_main">Home</string>
    <string name="app_logo_content_desc">Image for showing app logo</string>

    <!-- Launcher Icon -->
    <string name="logo_app">ImageView for holding app logo.</string>

    <!-- SignInActivity -->
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <!-- PhoneAuthActivity -->
    <!-- PhoneNumberFragment -->
    <string name="mobile_no">Mobile Number</string>
    <string name="get_started">Let\'s Get Started</string>
    <string name="enter_mob_no">Enter your mobile number</string>
    <string name="dialpad_0">0</string>
    <string name="dialpad_1">1</string>
    <string name="dialpad_2">2</string>
    <string name="dialpad_3">3</string>
    <string name="dialpad_4">4</string>
    <string name="dialpad_5">5</string>
    <string name="dialpad_6">6</string>
    <string name="dialpad_7">7</string>
    <string name="dialpad_8">8</string>
    <string name="dialpad_9">9</string>
    <string name="dialpad_back">\u232b</string>
    <string name="dialpad_plus">+</string>
    <string name="button_proceed_phone_number">PROCEED</string>
    <string name="phone_icon_content_desc">Phone icon.</string>
    <!-- PhoneNumberVerificationFragment -->
    <string name="phone_number_verification_display_text">Waiting to automatically detect an SMS sent to your mobile number</string>
    <string name="otp">Enter 6-digit code sent to your phone</string>
    <string name="no_otp">Didn\'t receive the code?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="button_verify_phone_number">VERIFY</string>
    <string name="message_icon_content_desc">Message icon.</string>

    <!-- NewUserDetailsFillUpActivity -->
    <string name="getting_started_1">Yay!</string>
    <string name="getting_started_2">Just few details.<!-- and you\'ll be all set--></string>
    <string name="fname">First Name</string>
    <string name="mname">Middle Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="select_dob">Select your birthday!</string>
    <string name="dob">DOB</string>
    <string name="date_picker_content_desc">Date Picker Image Button</string>
    <string name="country">Country</string>
    <string name="create_profile">Create Profile</string>
    <string name="select_country">Select a country</string>
    <string-array name="countries">
        <!--<item></item>-->
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>The Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Democratic Republic of the Congo</item>
        <item>Republic of the Congo</item>      <!-- Order might be changed here. -->
        <item>Costa Rica</item>
        <item>Côte d’Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor (Timor-Leste)</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>The Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>North Korea</item>            <!-- Order might be changed here. -->
        <item>South Korea</item>            <!-- Order might be changed here. -->
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Federated States of Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>South Sudan</item>                <!-- Order might be changed here. -->
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <!-- MainActivity -->
    <string name="fragment_home">Home</string>
    <string name="recent">Recent Transactions</string>
    <string name="favorites">Favorites</string>
    <string name="pay_to">Pay To</string>
    <string name="receive_from">Receive From</string>
    <string name="no_transactions_content_desc">Icons for No Transactions</string>

    <!-- ArticleActivity -->
    <string name="title_activity_article">ArticleActivity</string>

    <!-- ProfileActivity -->
    <string name="activity_profile">Profile</string>
    <string name="general_info">General Details</string>
    <string name="account_settings">Account Settings</string>
    <string name="balance">Balance</string>
    <string name="change_pwd">Change Password</string>
    <string name="update_details">Update Details</string>
    <string name="logout">Logout</string>
    <string name="profile_header_content_desc">Header Image for user</string>
    <string name="change_pwd_content_desc">Icon for Change Password</string>
    <string name="update_details_content_desc">Icon for Update Details</string>
    <string name="logout_content_desc">Icon for Logout</string>

    <!-- UpdateDetailsActivity -->
    <string name="activity_update_details">Update Details</string>
    <string name="date_of_birth">Birthday!</string>

    <!-- About App Activity strings -->
    <string name="copyright_details">\u00A9 Deriva</string>
    <string name="version_number">Version 1.0.0</string>

    <!-- Others -->
    <string name="comment_icon_content_desc">Comment Icon</string>

</resources>
