<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/get_started"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/icon_phone_android_fragment_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <ImageView
        android:id="@+id/icon_phone_android_fragment_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@mipmap/baseline_phone_android_black_48"
        android:contentDescription="@string/phone_icon_content_desc"
        app:layout_constraintBottom_toTopOf="@+id/tv_enter_mob_no_fragment_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_get_started"/>

    <TextView
        android:id="@+id/tv_enter_mob_no_fragment_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/enter_mob_no"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_mobile_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_phone_android_fragment_phone_number"/>

    <EditText
        android:id="@+id/edit_text_mobile_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:cursorVisible="false"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/layout_dialpad_fragment_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_mob_no_fragment_phone_number"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialpad_fragment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_proceed_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_mobile_no">

        <Button
            android:id="@+id/button_dialpad_7_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_7"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_6_fragment_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_8_fragment_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button_dialpad_8_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_8"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_5_fragment_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_9_fragment_phone_number"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_7_fragment_phone_number"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button_dialpad_9_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_9"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_4_fragment_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_8_fragment_phone_number"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button_dialpad_4_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_4"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_3_fragment_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_5_fragment_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_9_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_5_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_5"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_2_fragment_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_6_fragment_phone_number"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_4_fragment_phone_number"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_8_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_6_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_6"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_1_fragment_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_5_fragment_phone_number"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_7_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_1_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_1"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_plus_fragment_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_2_fragment_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_6_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_2_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_2"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_0_fragment_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_3_fragment_phone_number"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_1_fragment_phone_number"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_5_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_3_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_3"
            app:layout_constraintBottom_toTopOf="@id/button_dialpad_back_fragment_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_2_fragment_phone_number"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_4_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_back_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_dialpad_3_fragment_phone_number"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_0_fragment_phone_number"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_3_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_0_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/dialpad_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_back_fragment_phone_number"
            app:layout_constraintStart_toEndOf="@id/button_dialpad_plus_fragment_phone_number"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_2_fragment_phone_number"/>

        <Button
            android:id="@+id/button_dialpad_plus_fragment_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/dialpad_plus"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_dialpad_0_fragment_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_dialpad_1_fragment_phone_number"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_proceed_phone_number"
            style="@style/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_proceed_phone_number"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialpad_fragment_phone_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>